Add RequestValidationErrorResponse in openapi and Fix create handler type error
