# starter/docs/swagger.json
@@ -39,7 +39,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/example.ListResp"
+                            "$ref": "#/definitions/internal_example.ListResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utl.RequestValidationErrorResponse"
                         }
                     }
                 }
@@ -63,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/example.CreateReq"
+                            "$ref": "#/definitions/internal_example.CreateReq"
                         }
                     }
                 ],
@@ -71,7 +77,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/example.CreateResp"
+                            "$ref": "#/definitions/internal_example.CreateResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utl.RequestValidationErrorResponse"
                         }
                     }
                 }
@@ -115,7 +127,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/example.ListResp"
+                            "$ref": "#/definitions/internal_example.ListResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utl.RequestValidationErrorResponse"
                         }
                     }
                 }
@@ -146,7 +164,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/example.EditReq"
+                            "$ref": "#/definitions/internal_example.EditReq"
                         }
                     }
                 ],
@@ -154,7 +172,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/example.EditResp"
+                            "$ref": "#/definitions/internal_example.EditResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utl.RequestValidationErrorResponse"
                         }
                     }
                 }
@@ -185,7 +209,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/example.DeleteReq"
+                            "$ref": "#/definitions/internal_example.DeleteReq"
                         }
                     }
                 ],
@@ -193,18 +217,21 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/example.DeleteResp"
+                            "$ref": "#/definitions/internal_example.DeleteResp"
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utl.RequestValidationErrorResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
-        "example.CreateReq": {
+        "internal_example.CreateReq": {
             "type": "object",
             "required": [
                 "name"
@@ -215,7 +242,7 @@
                 }
             }
         },
-        "example.CreateResp": {
+        "internal_example.CreateResp": {
             "type": "object",
             "properties": {
                 "name": {
@@ -223,7 +250,7 @@
                 }
             }
         },
-        "example.DeleteReq": {
+        "internal_example.DeleteReq": {
             "type": "object",
             "properties": {
                 "name": {
@@ -231,26 +258,7 @@
                 }
             }
         },
-        "example.DeleteResp": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "example.EditReq": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "example.EditResp": {
+        "internal_example.DeleteResp": {
             "type": "object",
             "properties": {
                 "id": {
@@ -261,13 +269,69 @@
                 }
             }
         },
-        "example.ListResp": {
+        "internal_example.EditReq": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_example.EditResp": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_example.ListResp": {
             "type": "object",
             "properties": {
                 "func": {
                     "type": "string"
                 }
             }
+        },
+        "utl.RequestValidationError": {
+            "type": "object",
+            "properties": {
+                "field": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "string"
+                }
+            }
+        },
+        "utl.RequestValidationErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error_type": {
+                    "$ref": "#/definitions/utl.RequestValidationErrorType"
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/utl.RequestValidationError"
+                    }
+                }
+            }
+        },
+        "utl.RequestValidationErrorType": {
+            "type": "string",
+            "enum": [
+                "invalid_field"
+            ],
+            "x-enum-varnames": [
+                "requestValidationErrorTypeInvalidField"
+            ]
         }
     }
 }
