# starter/internal/example/handler.go
@@ -40,6 +40,7 @@ func (h *Handler) SetRoutes(e *echo.Group) {
 //	@Param			limit	query		int	false	"Limit"
 //	@Param			offset	query		int	false	"Offset"
 //	@Success		200		{object}	ListResp
+//	@Failure		400		{object}	utl.RequestValidationErrorResponse
 //	@Router			/example [get]
 func (h *Handler) List(c echo.Context) error {
 	var query ListQuery
@@ -77,6 +78,7 @@ type ListResp struct {
 //	@Param			limit	query		int		false	"Limit"
 //	@Param			offset	query		int		false	"Offset"
 //	@Success		200		{object}	ListResp
+//	@Failure		400		{object}	utl.RequestValidationErrorResponse
 //	@Router			/example/{id} [get]
 func (h *Handler) One(c echo.Context) error {
 	id := c.Param("id")
@@ -114,6 +116,7 @@ type OneResp struct {
 //	@Produce		json
 //	@Param			req	body		CreateReq	true	"Request"
 //	@Success		200	{object}	CreateResp
+//	@Failure		400	{object}	utl.RequestValidationErrorResponse
 //	@Router			/example [post]
 func (h *Handler) Create(c echo.Context) error {
 	var req CreateReq
@@ -149,6 +152,7 @@ type CreateResp struct {
 //	@Param			id	path		string	true	"ID"
 //	@Param			req	body		EditReq	true	"Request"
 //	@Success		200	{object}	EditResp
+//	@Failure		400	{object}	utl.RequestValidationErrorResponse
 //	@Router			/example/{id} [put]
 func (h *Handler) Edit(c echo.Context) error {
 	id := c.Param("id")
@@ -188,7 +192,7 @@ type EditResp struct {
 //	@Param			id	path		string		true	"ID"
 //	@Param			req	body		DeleteReq	true	"Request"
 //	@Success		200	{object}	DeleteResp
-//	@Failure		400	{object}	nil
+//	@Failure		400	{object}	utl.RequestValidationErrorResponse
 //	@Router			/example/{id} [delete]
 func (h *Handler) Delete(c echo.Context) error {
 	id := c.Param("id")
